Changed the time of update chat

--- a/Powwow/Info.plist
+++ b/Powwow/Info.plist
@@ -44,7 +44,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Notifications may include alerts, sounds and icon badges. These can be configured in Settings.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
